trying to fix not added styles to news scrollbar

--- a/src/components/Background/background.module.scss
+++ b/src/components/Background/background.module.scss
@@ -9,6 +9,7 @@
     transform:translate(-50%, -50%);
     z-index:-1;
     @include breakpoint(lg){
+        height:auto;
         min-width:100vw;
     }
 }
